Adding config file for input selection for runs

--- a/run_histos/notebooks/loading_from_ML4DQM_run_files.ipynb
+++ b/run_histos/notebooks/loading_from_ML4DQM_run_files.ipynb
@@ -364,7 +364,13 @@
       "EGamma_321230_UL2018.csv  SingleMuon_321310_UL2018.csv\r\n",
       "EGamma_321231_UL2018.csv  SingleMuon_321311_UL2018.csv\r\n",
       "EGamma_321232_UL2018.csv  SingleMuon_321312_UL2018.csv\r\n",
-      "EGamma_321233_UL2018.csv  SingleMuon_321313_UL2018.csv\r\n",
+      "EGamma_321233_UL2018.csv  SingleMuon_321313_UL2018.csv\r\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "EGamma_321261_UL2018.csv  SingleMuon_321393_UL2018.csv\r\n",
       "EGamma_321262_UL2018.csv  SingleMuon_321396_UL2018.csv\r\n",
       "EGamma_321283_UL2018.csv  SingleMuon_321397_UL2018.csv\r\n",
@@ -1674,7 +1680,7 @@
     }
    ],
    "source": [
-    "list(df_workspace[df_workspace['run']==315257]['title'].unique())"
+    "list(df_workspace['title'].unique())"
    ]
   },
   {
